syntax = "proto3";

package oceannik;

option go_package = "github.com/oceannik/oceannik/common/proto;pb";

service SecretService {
  rpc ListSecrets(ListSecretsRequest) returns (stream Secret) {}

  rpc GetSecret(GetSecretRequest) returns (Secret) {}

  rpc SetSecret(SetSecretRequest) returns (Secret) {}
}

enum SecretKind {
  UNSPECIFIED = 0;
  PLAIN = 1;
  FILE = 2;
}

message Secret {
  string namespace = 1;
  string key = 2;
  string value = 3;
  string description = 4;
  SecretKind kind = 5;
}

message ListSecretsRequest { string namespace = 1; }

message GetSecretRequest {
  string namespace = 1;
  string key = 2;
}

message SetSecretRequest {
  string namespace = 1;
  string key = 2;
  string value = 3;
  string description = 4;
  SecretKind kind = 5;
  bool overwrite_if_exists = 6;
}
